2001-08-06 Thomas Flynn <tflynn@users.sourceforge.net>
	* Initial checkin for Java in the Script node support.
	  From patch submitted by Henri Manson.

2001-08-04  Braden McDaniel  <braden@endoframe.com>

        * Fixed minor bug in MFInt32::setElement() in the JavaScript
          binding.

2001-07-30  Braden McDaniel  <braden@endoframe.com>

        * Removed obsolete #undef's in `acconfig.h'.

        * Added private macro for outputting exception messages in debug
          mode.

        * Changed Viewer's constructor to take a VrmlScene reference
          rather than a pointer.

2001-07-24  Braden McDaniel  <braden@endoframe.com>

        * Added Joerg Scheurich's warbird game to the sample worlds.

2001-07-18  S. K. Bose  <bose@pavan.barc.ernet.in>

        * Win32 GL declarations are taken out from 
          ViewerOpenGL.h and put it into ViewerOpenGL.cpp

2001-07-14  Braden McDaniel  <braden@endoframe.com>

        * Fixed a bug in the JavaScript binding where
          createVrmlFieldFromJsval would create a VrmlSFFloat when it
          should have been creating a VrmlSFTime.

2001-06-30  Braden McDaniel  <braden@endoframe.com>

        * Changed SFRotations to require that their axis component must
          be a unit vector. This change was incompatible with write
          access using operator[]; both read and write access using
          operator[] with VrmlSFRotation has been eliminated.

2001-06-29  Braden McDaniel <braden@endoframe.com>

        * Added ommitted class initializations for the MFString and MFTime
          JavaScript types.

2001-06-25  Braden McDaniel <braden@endoframe.com>

        * Moved ScriptObject's factory method from the static method on
          ScriptObject to a private method of VrmlNodeScript. This
          serves to clean up the ScriptObject interface. In conjunction
          with this change, the JavaScript binding code has been moved
          from `ScriptObject.cpp' to `VrmlNodeScript.cpp'.
